Bug: Fix style on profile pic causing it to squish

--- a/static/styles.css
+++ b/static/styles.css
@@ -18,11 +18,11 @@ body {
   font-size: 0.8rem;
 }
 .profile-pic {
-  width: 150px;
-  height: 150px;
-  border-radius: 75px;
-  -webkit-border-radius: 75px;
-  -moz-border-radius: 75px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 }
 .block-text {
   white-space: pre-wrap;
